--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   max-width: 980px;
   border: 5px solid coral;
-  /*background: blue;*/
+  background: blue;
   margin: 0 auto;
 }
 
@@ -37,20 +37,27 @@ header h1 {
 nav {
   text-align: center;
   position: absolute;
-  bottom: 0;
   width: 100%;
   margin: 0 auto;
+  transition: 0.25s;
+}
+
+.bottom {
+  bottom: 0;
 }
 
 nav.scrolled { /* This will only take place when the navbar reaches the set point on the page */
   position: fixed;
   z-index: 99;
-  top:10px;
+  /*top:10px;*/
   left:0;
+  background: white;
+  transition: 0.25s;
 }
 
 ul {
-
+  padding: 0;
+  margin: 0;
 }
 
 header nav ul li {
