--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,18 @@ body {
   box-sizing: border-box;
 }
 
-.section {
-  height: 500px;
+section {
+  height: 100vh;
   width: 100%;
+}
+
+.content {
   max-width: 980px;
   border: 5px solid coral;
   background: blue;
   margin: 0 auto;
+  height: 100%;
+  position: relative;
 }
 
 /* header */
@@ -23,6 +28,7 @@ header {
   text-align: center;
   width: 100%;
   height: 100vh;
+
 }
 
 header h1 {
@@ -32,6 +38,7 @@ header h1 {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: white;
 }
 
 nav {
@@ -39,7 +46,7 @@ nav {
   position: absolute;
   width: 100%;
   margin: 0 auto;
-  transition: 0.25s;
+  transition: 0.3s;
 }
 
 .bottom {
@@ -51,8 +58,9 @@ nav.scrolled { /* This will only take place when the navbar reaches the set poin
   z-index: 99;
   /*top:10px;*/
   left:0;
-  background: white;
-  transition: 0.25s;
+  background: DeepSkyBlue;
+  transition: 0.3s;
+  box-shadow: 0 0 1px 0 gray;
 }
 
 ul {
@@ -62,5 +70,14 @@ ul {
 
 header nav ul li {
   display: inline-block;
-  padding: 20px;
+  /*padding: 0 40px;*/
+  padding: 20px 40px;
+}
+
+#message {
+  position: absolute;
+  right: 50px;
+  width: 350px;
+  height: 300px;
+  border: 1px solid black;
 }
