--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ header nav ul li {
   border: 1px solid black;
 }
 
+#about-us:target {
+  border: 1px solid red;
+}
+
 /*#rsvp {
   padding: 40px;
   display: flex;
