--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: 'Trirong', serif;
+  background: #F4F4F4;
 }
 
 #container {
@@ -10,17 +11,25 @@ body {
 }
 
 section {
-  height: 75vh;
+  /*min-height: 400px;*/
   width: 100%;
-  position: relative;
+  border: 1px solid black;
+  /*padding: 40px;*/
 }
 
 .content {
   max-width: 980px;
-  border: 5px solid coral;
+  /*border: 5px solid coral;*/
   margin: 0 auto;
-  height: 100%;
   /*position: relative;*/
+}
+
+h2 {
+  text-align: center;
+}
+
+p {
+  padding: 0 20px;
 }
 
 /* header */
@@ -28,6 +37,7 @@ header {
   text-align: center;
   width: 100%;
   height: 100vh;
+  background: deepSkyBlue;
 
 }
 
@@ -82,21 +92,19 @@ header nav ul li {
   padding: 20px 40px;
 }
 
-#message {
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
-  left: 15%;
-  width: 350px;
-  height: 300px;
-  border: 1px solid black;
+
+.half {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
 }
 
-#about-us:target {
-  /*margin-top: -68px;*/
-  /*padding-top: 68px;*/
-  border: 1px solid red;
-  /*margin: 68px;*/
+
+@media screen and (min-width: 960px) {
+  .half {
+    width: 50%;
+    display: inline-block;
+  }
 }
 
 /*#rsvp {
