--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
 section {
   /*min-height: 400px;*/
   width: 100%;
-  border: 1px solid black;
   padding: 40px 0;
 }
 
@@ -40,19 +39,21 @@ p {
 header {
   text-align: center;
   width: 100%;
-  height: 100vh;
+  height: 60vh;
+  /* height: 100vh */
   background: deepSkyBlue;
-
+  transition: 0.5s;
 }
 
 header h1 {
   font-size: 3rem;
   position: absolute;
   width: 80vw;
-  top: 40%;
+  top: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  transition: 0.5s;
 }
 
 nav {
@@ -61,6 +62,7 @@ nav {
   width: 100%;
   margin: 0 auto;
   transition: 0.3s;
+  visibility: hidden;
 }
 
 nav a {
@@ -105,6 +107,20 @@ header nav ul li {
 
 
 @media screen and (min-width: 960px) {
+  header {
+    height: 100vh;
+    transition: 0.5s;
+  }
+
+  header h1 {
+    top: 40%;
+    transition: 0.5s;
+  }
+
+  nav {
+    visibility: visible;
+  }
+
   .half {
     width: 50%;
     display: inline-block;
