--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,12 @@ header {
   width: 100%;
   height: 60vh;
   /* height: 100vh */
-  background: deepSkyBlue;
+  /*background: deepSkyBlue;*/
+  background: url("../img/sample-1.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   transition: 0.5s;
 }
 
@@ -69,6 +74,12 @@ nav a {
   color: white;
 }
 
+#img-shade {
+  width: 100%;
+  height: 100%;
+  /*background: rgba(255, 153, 0, .15);*/
+}
+
 .bottom {
   bottom: 0;
 }
@@ -76,7 +87,6 @@ nav a {
 nav.scrolled { /* This will only take place when the navbar reaches the set point on the page */
   position: fixed;
   z-index: 99;
-  /*top:10px;*/
   left:0;
   background: white;
   transition: 0.3s;
@@ -90,6 +100,7 @@ nav.scrolled a{
 ul {
   padding: 0;
   margin: 0;
+  font-size: 1.3rem;
 }
 
 header nav ul li {
