--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ nav a {
   width: 100%;
   height: 100%;
   /*background: rgba(255, 153, 0, .15);*/
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    );
 }
 
 .bottom {
@@ -98,15 +102,18 @@ nav.scrolled a{
 }
 
 ul {
+  color
   padding: 0;
   margin: 0;
   font-size: 1.3rem;
+  font-weight: bold;
 }
 
 header nav ul li {
   display: inline-block;
   /*padding: 0 40px;*/
   padding: 20px 40px;
+  color: gray;
 }
 
 
@@ -124,7 +131,7 @@ header nav ul li {
   }
 
   header h1 {
-    top: 40%;
+    top: 50%;
     transition: 0.5s;
   }
 
@@ -136,6 +143,18 @@ header nav ul li {
     width: 50%;
     display: inline-block;
   }
+}
+
+#about-us {
+  background: #e74c3c;
+}
+
+#our-story {
+  background: deepSkyBlue;
+}
+
+#when-where {
+  background: orange;
 }
 
 /*#rsvp {
