--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
   <head>
     <title>A&H</title>
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Trirong|Pacifico" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Trirong|Pacifico" rel="stylesheet"> -->
 
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/form.css">
     <link rel="stylesheet" type="text/css" href="css/timeline.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/hamburger.css">
@@ -15,12 +16,16 @@
       type="image/png" 
       href="favicon.png">
 
+           
+<!-- 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/main.js"></script>
     <script src="js/modernizr.js"></script>
-    <script type="js/hamburger.js"></script>
+    <script src="js/hamburger.js"></script>
+ -->
   </head>
   <body>    
     <div id="container">
@@ -31,9 +36,18 @@
             <div class="icon-1" id="a"></div>
             <div class="icon-2" id="b"></div>
             <div class="icon-3" id="c"></div>
-            <div class="clear"></div>
           </div>
           <nav id="navbar" class="bottom"> <!-- desktop menu-->
+            <ul>
+              <li><a data-scroll href="#home">Home</a></li>
+              <li><a data-scroll href="#about-us">About Us</a></li>
+              <li><a data-scroll href="#our-story">Our Story</a></li>
+              <li><a data-scroll href="#when-where">When and Where</a></li>
+              <!-- <li><a data-scroll href="#guestbook">Guestbook</a></li> -->
+              <li><a href="#rsvp">RSVP</a></li>
+            </ul>
+          </nav> 
+          <nav id="navres" class="bottom"> <!-- desktop menu-->
             <ul>
               <li><a data-scroll href="#home">Home</a></li>
               <li><a data-scroll href="#about-us">About Us</a></li>
@@ -150,22 +164,85 @@
           <h2>When and Where</h2>
         </div>
       </section>
-      <section>
+      
+     <!--  <section>
         <div id="guestbook" class="content">
           <h2>Guestbook</h2>
           
         </div>
-      </section>
-      <!-- <aside id="rsvp">
-        <div class="left">
-          <h2>Contact</h2>
+      </section> -->
+      <!-- <section id="rsvp">
+          
+        <div class="left col">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. </p>
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="right"></div>
-      </aside> -->
+        <div class="right col">
+            <form>
+            <label for="first-name">First Name : </label>
+            <input type="text" name="first-name"><br>
+            <label for="last-name">Last Name: </label>
+            <input type="text" name="last-name"><br>
+            <label for="email">Email: </label>
+            <input type="text" name="email"><br>
+            <label for="allergies">Food Allergies</label>
+            <input type="textarea" name="allergies">
+            <button type="button" onclick="addRow()">Add a Guest</button>
+            <button type="submit">Submit</button>
+            <div id="guests"></div>
+          </form>
+        </div>
+      </section> -->
+      <section id="RSVP">
+        <h2>Contact</h2>
+
+        <form class="form-style-6" method="post">
+
+          <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <hr>
+          <div>
+            <label class="desc" id="title1" for="Field1">Full Name</label>
+            <div>
+              <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
+            </div>
+          </div>
+            
+          <div>
+            <label class="desc" id="title3" for="Field3">
+              Email
+            </label>
+            <div>
+              <input id="Field3" name="Field3" type="email" spellcheck="false" value="" maxlength="255" tabindex="3"> 
+           </div>
+          </div>
+            
+          <div>
+            <label class="desc" id="title4" for="Field4">
+              Message
+            </label>
+          
+            <div>
+              <textarea id="Field4" name="Field4" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+            </div>
+          </div>
+        
+              <input id="submitForm" name="submitForm" type="submit" value="Submit">
+            </div>
+          </div>
+          
+        </form>
+      </section>
       <section>
         <div class="content"></div>
       </section>
@@ -177,11 +254,11 @@
     
     $(window).scroll(function () {
       if ( $(window).scrollTop() >= $("header").height() - 70) {
-        $('nav').addClass("scrolled");
-        $('nav').removeClass("bottom");
+        $('#navbar').addClass("scrolled");
+        $('#navbar').removeClass("bottom");
       } else {
-        $('nav').removeClass("scrolled");
-        $('nav').addClass("bottom");
+        $('#navbar').removeClass("scrolled");
+        $('#navbar').addClass("bottom");
       }
     });
 
