--- a/views/index.ejs
+++ b/views/index.ejs
@@ -212,28 +212,28 @@
           </p>
           <hr>
           <div>
-            <label class="desc" id="title1" for="Field1">Full Name</label>
+            <label class="desc" id="title1" for="fullName">Full Name</label>
             <div>
-              <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
+              <input id="fullName" name="fullName" type="text" class="field text fn" value="" size="8" tabindex="1">
             </div>
           </div>
             
           <div>
-            <label class="desc" id="title3" for="Field3">
+            <label class="desc" id="title3" for="email">
               Email
             </label>
             <div>
-              <input id="Field3" name="Field3" type="email" spellcheck="false" value="" maxlength="255" tabindex="3"> 
+              <input id="email" name="email" type="email" spellcheck="false" value="" maxlength="255" tabindex="3"> 
            </div>
           </div>
             
           <div>
-            <label class="desc" id="title4" for="Field4">
+            <label class="desc" id="title4" for="message">
               Message
             </label>
           
             <div>
-              <textarea id="Field4" name="Field4" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+              <textarea id="message" name="message" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
             </div>
           </div>
         
