adding production db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>A&H</title>
     <!-- fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Trirong|Pacifico" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Trirong|Pacifico" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/form.css">
@@ -16,16 +16,13 @@
       type="image/png" 
       href="favicon.png">
 
-           
-<!-- 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/main.js"></script>
     <script src="js/modernizr.js"></script>
     <script src="js/hamburger.js"></script>
- -->
+
   </head>
   <body>    
     <div id="container">
