--- a/static/css/hamburger.css
+++ b/static/css/hamburger.css
@@ -102,14 +102,14 @@ nav ul li #navres {
 }
 
 nav #navres.show {
-  width: 50%;
+  width: 100%;
   opacity: 1;
 }
 
 .dark-blue {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   background: #64B5F6;
   height: 100%;
   width: 0%;
