--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="jp">
     <title>A&H</title>
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Trirong|Pacifico" rel="stylesheet">
@@ -22,7 +22,6 @@
     <script src="js/main.js"></script>
     <script src="js/modernizr.js"></script>
     <script src="js/hamburger.js"></script>
-
   </head>
   <body>    
     <div id="container">
@@ -36,51 +35,28 @@
           </div>
           <nav id="navbar" class="bottom"> <!-- desktop menu-->
             <ul>
-              <li><a data-scroll href="#home">Home</a></li>
-              <li><a data-scroll href="#about-us">About Us</a></li>
-              <li><a data-scroll href="#our-story">Our Story</a></li>
-              <li><a data-scroll href="#when-where">When and Where</a></li>
-              <!-- <li><a data-scroll href="#guestbook">Guestbook</a></li> -->
-              <li><a href="#rsvp">RSVP</a></li>
+              <li><a data-scroll href="#home">ホーム</a></li>
+              <li><a data-scroll href="#our-story">私たちについて</a></li>
+              <li><a data-scroll href="#when-where">開催日時・場所</a></li>
+              <li><a data-scroll href="#rsvp">参加予約</a></li>
             </ul>
           </nav> 
-          <nav id="navres" class="bottom"> <!-- desktop menu-->
-            <ul>
-              <li><a data-scroll href="#home">Home</a></li>
-              <li><a data-scroll href="#about-us">About Us</a></li>
-              <li><a data-scroll href="#our-story">Our Story</a></li>
-              <li><a data-scroll href="#when-where">When and Where</a></li>
-              <li><a data-scroll href="#guestbook">Guestbook</a></li>
-              <!-- <li><a href="#rsvp">RSVP</a></li> -->
+          <div class="dark-blue" id="blue">
+            <nav id="navres" class="bottom"> <!-- mobile menu-->
+            <ul id="pullout-menu">
+              <li><a href="#home">ホーム</a></li><br>
+              <li><a href="#our-story">私たちについて</a></li><br>
+              <li><a href="#when-where">開催日時・場所</a></li><br>
+              <li><a href="#rsvp">参加予約￥</a></li>
             </ul>
           </nav>  
-        </div>
-      </header>
-      <section id="about-us">
-        <div class="content">
-          <h2>About Us</h2>
-          <div class="half">
-              <h3>From Alex</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div><div class="half">
-              <h3>From Haruka</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-      </section>
+      </header>
+      
       <section id="our-story">
         <div class="content">
-          <h2>Our Story</h2>
+          <h2>私たちについて</h2>
           <section id="cd-timeline" class="cd-container">
     <div class="cd-timeline-block">
       <div class="cd-timeline-img cd-picture">
@@ -88,9 +64,9 @@
       </div> <!-- cd-timeline-img -->
 
       <div class="cd-timeline-content">
-        <h2>Title of section 1</h2>
+        <h2>Our fateful encounter</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-        <span class="cd-date">Jan 14</span>
+        <span class="cd-date">November 4th 2014</span>
       </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
 
@@ -158,7 +134,7 @@
       </section>
       <section id="when-where">
         <div class="content">
-          <h2>When and Where</h2>
+          <h2>開催日時・場所</h2>
         </div>
       </section>
       
