--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
           </nav> 
           <div class="dark-blue" id="blue">
             <nav id="navres" class="bottom"> <!-- mobile menu-->
-            <ul id="pullout-menu">
+            <ul id="pullout-menu" class="hide">
               <li><a href="#home">ホーム</a></li><br>
               <li><a href="#our-story">私たちについて</a></li><br>
               <li><a href="#when-where">開催日時・場所</a></li><br>
