--- a/static/css/hamburger.css
+++ b/static/css/hamburger.css
@@ -2,8 +2,10 @@
   position: absolute;
   left: 25%;
   top: 50%;
-  width: 32px;
-  height: 3px;
+  /*width: 32px;*/
+  width: 3rem;
+  /*height: 3px;*/
+  height: .2rem;
   background-color: white;
   transition: all 400ms cubic-bezier(0.84, 0.06, 0.52, 1.8);
 }
@@ -20,10 +22,12 @@
 
 .hamburger-icon {
   position: fixed;
-  height: 60px;
-  width: 60px;
-  top: 10%;
-  right: 3%;
+  /*height: 60px;*/
+  /*width: 60px;*/
+  height: 6rem;
+  width: 6rem;
+  top: 8%;
+  right: 9%;
   z-index: 1000;
   cursor: pointer;
   border-radius: 50%;
@@ -65,7 +69,7 @@
 
 @keyframes slideIn {
   0% {
-    width: 0%;
+    width: 50%;
     opacity: 0;
   }
   100% {
@@ -74,16 +78,34 @@
   }
 }
 
+.dark-blue {
+  position: fixed;
+  top: 0;
+  right: -50%;
+  background: #64B5F6;
+  height: 100%;
+  width: 50%;
+  transition: all 500ms cubic-bezier(0.25, 1, 0.25, 1);
+  transition-delay: 50ms;
+  z-index: 5;
+  opacity: 1;
+}
+
+.dark-blue.slide {
+  opacity: 1;
+  right: 0;
+}
+
 nav #navres {
   background: #0288D1;
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
-  width: 0%;
+  width: 100%;
   z-index: 10;
-  opacity: 0;
-  transition: all 600ms cubic-bezier(0.62, 0.04, 0.3, 1.56);
+  opacity: 1;
+  transition: all 500ms cubic-bezier(0.25, 1, 0.25, 1);
   transition-delay: 100ms;
 }
 nav ul #navres {
@@ -106,22 +128,17 @@ nav #navres.show {
   opacity: 1;
 }
 
-.dark-blue {
-  position: fixed;
-  top: 0;
-  right: 0;
-  background: #64B5F6;
-  height: 100%;
-  width: 0%;
-  transition: all 500ms cubic-bezier(0.62, 0.04, 0.3, 1.8);
-  transition-delay: 50ms;
-  z-index: 5;
-  opacity: 1;
-}
-
-.dark-blue.slide {
-  width: 50%;
-  opacity: 1;
+#pullout-menu {
+  padding: 0px;
+  border: 5px solid orange;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  webkit-transition-delay: 500ms;
+    -moz-transition-delay: 500ms;
+    -o-transition-delay: 500ms;
+    transition-delay: 500ms;
 }
 
 @keyframes shotup {
@@ -138,7 +155,7 @@ nav #navres.show {
   }
 }
 
-@media screen and (min-width: 960px) {
+@media (min-width: 720px) {
   .hamburger-icon {
     visibility: hidden;
     opacity: 0;
