--- a/static/css/hamburger.css
+++ b/static/css/hamburger.css
@@ -1,11 +1,11 @@
 .icon-1, .icon-2, .icon-3 {
   position: absolute;
   left: 25%;
-  top: 50%;
-  /*width: 32px;*/
-  width: 3rem;
-  /*height: 3px;*/
-  height: .2rem;
+  top: 48%;
+  width: 32px;
+  /*width: 2.5rem;*/
+  height: 3px;
+  /*height: .2rem;*/
   background-color: white;
   transition: all 400ms cubic-bezier(0.84, 0.06, 0.52, 1.8);
 }
@@ -22,12 +22,14 @@
 
 .hamburger-icon {
   position: fixed;
-  /*height: 60px;*/
-  /*width: 60px;*/
-  height: 6rem;
-  width: 6rem;
-  top: 8%;
-  right: 9%;
+  height: 60px;
+  width: 60px;
+  /*height: 5rem;*/
+  /*width: 5rem;*/
+/*  top: 8%;
+  right: 9%;*/
+  top: 10%;
+  right: 3%;
   z-index: 1000;
   cursor: pointer;
   border-radius: 50%;
@@ -155,11 +157,11 @@ nav #navres.show {
   }
 }
 
-@media (min-width: 720px) {
+/*@media (min-width: 720px) {
   .hamburger-icon {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s linear 400ms, opacity 400ms;
     
   }
-}
+}*/
