--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,23 +3,15 @@
   <head lang="jp">
     <title>A&H</title>
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Trirong|Pacifico" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/form.css">
     <link rel="stylesheet" type="text/css" href="css/timeline.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/hamburger.css">
-
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- favicon -->
     <link rel="icon" 
       type="image/png" 
       href="favicon.png">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/smooth-scroll.min.js"></script>
-    <script src="js/parallax.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/modernizr.js"></script>
-    <script src="js/hamburger.js"></script>
   </head>
   <body>    
     <div id="container">
@@ -40,7 +32,7 @@
             </ul>
           </nav> 
           <div class="dark-blue" id="blue">
-            <nav id="navres" class="bottom"> <!-- mobile menu-->
+            <nav id="navres" class="bottom"> 
             <ul id="pullout-menu" class="hide">
               <li><a href="#home">ホーム</a></li><br>
               <li><a href="#our-story">私たちについて</a></li><br>
@@ -238,4 +230,10 @@
       window.scrollTo(window.scrollX, window.scrollY - 68);
     });
   </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/smooth-scroll.min.js"></script>
+  <script src="js/parallax.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/modernizr.js"></script>
+  <script src="js/hamburger.js"></script>
 </html>
