--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,10 +25,6 @@ section {
   margin: 0 auto;
 }
 
-h1 {
-   font-family: 'Trirong', serif;
-}
-
 h2 {
 
   text-align: center;
@@ -46,9 +42,7 @@ p {
 header {
   text-align: center;
   width: 100%;
-  height: 60vh;
-  /* height: 100vh */
-  /*background: deepSkyBlue;*/
+  height: 90vh;
   background: url("../img/sample-1.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -58,10 +52,9 @@ header {
 }
 
 header h1 {
-  font-size: 3rem;
   position: absolute;
   width: 80vw;
-  top: 25%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -84,7 +77,7 @@ nav a {
 #img-shade {
   width: 100%;
   height: 100%;
-  /*background: rgba(255, 153, 0, .15);*/
+  background: rgba(255, 153, 0, .15);
   background: linear-gradient(
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
@@ -118,7 +111,6 @@ ul {
 header nav ul li {
   display: inline-block;
   padding: 1% 2%;
-  font-size: 2rem;
 }
 
 .half {
@@ -163,24 +155,3 @@ header nav ul li {
 #when-where {
   background: orange;
 }
-
-
-
-/*
-#rsvp {
-  padding: 40px;
-  display: flex;
-  flex-wrap: wrap;
-  border: 5px solid coral;
-  margin: 0 auto;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.col {
-  padding: 1em;
-  flex: 1;
-  border: solid;
-  max-width: 500px;
-}
-*/
