--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,13 +7,14 @@
     <link rel="stylesheet" type="text/css" href="css/timeline.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/hamburger.css">
+    <link rel="stylesheet" type="text/css" href="css/slideshow.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- favicon -->
-    <link rel="icon" 
-      type="image/png" 
+    <link rel="icon"
+      type="image/png"
       href="favicon.png">
   </head>
-  <body>    
+  <body>
     <div id="container">
       <header id="home">
         <div id="img-shade">
@@ -30,20 +31,20 @@
               <li><a data-scroll href="#when-where">開催日時・場所</a></li>
               <li><a data-scroll href="#rsvp">参加予約</a></li>
             </ul>
-          </nav> 
+          </nav>
           <div class="dark-blue" id="blue">
-            <nav id="navres" class="bottom"> 
+            <nav id="navres" class="bottom">
             <ul id="pullout-menu" class="hide">
               <li><a href="#home">ホーム</a></li><br>
               <li><a href="#our-story">私たちについて</a></li><br>
               <li><a href="#when-where">開催日時・場所</a></li><br>
               <li><a href="#rsvp">参加予約￥</a></li>
             </ul>
-          </nav>  
+          </nav>
           </div>
         </div>
       </header>
-      
+
       <section id="our-story">
         <div class="content">
           <h2>私たちについて</h2>
@@ -122,44 +123,30 @@
   </section> <!-- cd-timeline -->
         </div>
       </section>
+
+      <section>
+        <div class="content">
+          <h2>Some of the our favorite photos</h2>
+          <div id="slider">
+            <div class="control_next">></div>
+            <div href="#" class="control_prev"><</div>
+            <div id="img-container">
+              <div class="img-item" id="img-1"></div>
+              <div class="img-item" id="img-2" style="background: #aaa;">SLIDE 2</div>
+              <div class="img-item" id="img-3">SLIDE 3</div>
+              <div class="img-item" id="img-4" style="background: #aaa;">SLIDE 4</div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
       <section id="when-where">
         <div class="content">
           <h2>開催日時・場所</h2>
         </div>
       </section>
-      
-     <!--  <section>
-        <div id="guestbook" class="content">
-          <h2>Guestbook</h2>
-          
-        </div>
-      </section> -->
-      <!-- <section id="rsvp">
-          
-        <div class="left col">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="right col">
-            <form>
-            <label for="first-name">First Name : </label>
-            <input type="text" name="first-name"><br>
-            <label for="last-name">Last Name: </label>
-            <input type="text" name="last-name"><br>
-            <label for="email">Email: </label>
-            <input type="text" name="email"><br>
-            <label for="allergies">Food Allergies</label>
-            <input type="textarea" name="allergies">
-            <button type="button" onclick="addRow()">Add a Guest</button>
-            <button type="submit">Submit</button>
-            <div id="guests"></div>
-          </form>
-        </div>
-      </section> -->
+
       <section id="RSVP">
         <h2>Contact</h2>
 
@@ -180,30 +167,30 @@
               <input id="fullName" name="fullName" type="text" class="field text fn" value="" size="8" tabindex="1">
             </div>
           </div>
-            
+
           <div>
             <label class="desc" id="title3" for="email">
               Email
             </label>
             <div>
-              <input id="email" name="email" type="email" spellcheck="false" value="" maxlength="255" tabindex="3"> 
+              <input id="email" name="email" type="email" spellcheck="false" value="" maxlength="255" tabindex="3">
            </div>
           </div>
-            
+
           <div>
             <label class="desc" id="title4" for="message">
               Message
             </label>
-          
+
             <div>
               <textarea id="message" name="message" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
             </div>
           </div>
-        
+
               <input id="submitForm" name="submitForm" type="submit" value="Submit">
             </div>
           </div>
-          
+
         </form>
       </section>
       <section>
@@ -212,9 +199,10 @@
       <footer></footer>
     </div>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
   <script>
-    
+
     $(window).scroll(function () {
       if ( $(window).scrollTop() >= $("header").height() - 70) {
         $('#navbar').addClass("scrolled");
@@ -230,7 +218,7 @@
       window.scrollTo(window.scrollX, window.scrollY - 68);
     });
   </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/slideshow.js"></script>
   <script src="js/smooth-scroll.min.js"></script>
   <script src="js/parallax.js"></script>
   <script src="js/main.js"></script>
