--- a/static/css/slideshow.css
+++ b/static/css/slideshow.css
@@ -4,10 +4,10 @@
   margin: 20px auto 0 auto;
   border-radius: 4px;
   width: 100%;
-  /*max-width: 500px;*/
+  max-width: 500px;
 }
 
-#slider #img-container {
+#slider ul {
   position: relative;
   margin: 0;
   padding: 0;
@@ -15,12 +15,13 @@
   list-style: none;
 }
 
-#slider #img-container .img-item {
+#slider ul li {
   position: relative;
   display: block;
   float: left;
   margin: 0;
   padding: 0;
+  max-width: 500px;
   width: 100%;
   height: 300px;
   background: #ccc;
@@ -28,7 +29,7 @@
   line-height: 300px;
 }
 
-div.control_prev, div.control_next {
+#slider div.control_prev, #slider div.control_next {
   position: absolute;
   top: 40%;
   z-index: 999;
@@ -66,6 +67,7 @@ div.control_next {
   font-size: 18px;
 }
 
-#img-1 {
-  background: red;
+.slider-img {
+  background-size: 100%;
+  width: 100%;
 }
