update route for japanese

--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -130,12 +130,14 @@
           <div id="slider">
             <div class="control_next">></div>
             <div href="#" class="control_prev"><</div>
-            <div id="img-container">
-              <div class="img-item" id="img-1"></div>
-              <div class="img-item" id="img-2" style="background: #aaa;">SLIDE 2</div>
-              <div class="img-item" id="img-3">SLIDE 3</div>
-              <div class="img-item" id="img-4" style="background: #aaa;">SLIDE 4</div>
-            </div>
+            <ul id="img-container">
+              <li ><img src="img/slideshow/tree.jpg" class="slider-img" ></li>
+              <li ><img src="img/slideshow/bench.jpg" class="slider-img" ></li>
+              <li ><img src="img/slideshow/books.jpg" class="slider-img" ></li>
+              <li ><img src="img/slideshow/cafe.jpg" class="slider-img" ></li>
+              <li ><img src="img/slideshow/stairs.jpg" class="slider-img" ></li>
+              <li ><img src="img/slideshow/suzallo.jpg" class="slider-img" ></li>
+            </ul>
           </div>
 
         </div>
