--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@ header {
   text-align: center;
   width: 100%;
   height: 90vh;
-  background: url("../img/sample-1.jpg") no-repeat center center fixed; 
+  background: url("../img/slideshow/tree.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -109,10 +109,16 @@ ul {
   font-weight: bold;
 }
 
+ul li a {
+  font-size: 1.5rem;
+}
+
 header nav ul li {
   display: inline-block;
   padding: 1% 2%;
 }
+
+
 
 .half {
   width: 100%;
