--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -127,19 +127,14 @@
       <section>
         <div class="content">
           <h2>Some of the our favorite photos</h2>
-          <div id="slider">
-            <div class="control_next">></div>
-            <div href="#" class="control_prev"><</div>
-            <ul id="img-container">
-              <li ><img src="img/slideshow/tree.jpg" class="slider-img" ></li>
-              <li ><img src="img/slideshow/bench.jpg" class="slider-img" ></li>
-              <li ><img src="img/slideshow/books.jpg" class="slider-img" ></li>
-              <li ><img src="img/slideshow/cafe.jpg" class="slider-img" ></li>
-              <li ><img src="img/slideshow/stairs.jpg" class="slider-img" ></li>
-              <li ><img src="img/slideshow/suzallo.jpg" class="slider-img" ></li>
-            </ul>
-          </div>
-
+          <ul class="rslides">
+            <li ><img src="img/slideshow/tree.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/bench.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/books.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/cafe.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/stairs.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/suzallo.jpg" class="slider-img" ></li>
+          </ul>
         </div>
       </section>
 
@@ -202,6 +197,7 @@
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/responsiveslides.min.js"></script>
 
   <script>
 
