--- a/static/css/slideshow.css
+++ b/static/css/slideshow.css
@@ -1,73 +1,31 @@
-#slider {
+.rslides {
   position: relative;
-  overflow: hidden;
-  margin: 20px auto 0 auto;
-  border-radius: 4px;
-  width: 100%;
-  max-width: 500px;
-}
-
-#slider ul {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  height: 200px;
   list-style: none;
-}
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  }
 
-#slider ul li {
+.rslides li {
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  display: none;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.rslides li:first-child {
   position: relative;
   display: block;
   float: left;
-  margin: 0;
-  padding: 0;
-  max-width: 500px;
-  width: 100%;
-  height: 300px;
-  background: #ccc;
-  text-align: center;
-  line-height: 300px;
-}
+  }
 
-#slider div.control_prev, #slider div.control_next {
-  position: absolute;
-  top: 40%;
-  z-index: 999;
+.rslides img {
   display: block;
-  padding: 4% 3%;
-  width: auto;
   height: auto;
-  background: #2a2a2a;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 18px;
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-div.control_prev:hover, div.control_next:hover {
-  opacity: 1;
-  -webkit-transition: all 0.2s ease;
-}
-
-div.control_prev {
-  border-radius: 0 2px 2px 0;
-}
-
-div.control_next {
-  right: 0;
-  border-radius: 2px 0 0 2px;
-}
-
-.slider_option {
-  position: relative;
-  margin: 10px auto;
-  width: 160px;
-  font-size: 18px;
-}
-
-.slider-img {
-  background-size: 100%;
+  float: left;
   width: 100%;
-}
+  border: 0;
+  }
