reduce menu font size

--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head lang="jp">
-    <title>A|H</title>
+    <title>A&H | Tying the Knot!</title>
     <!-- fonts -->
     <link rel="stylesheet" type="text/css" href="css/form.css">
     <link rel="stylesheet" type="text/css" href="css/timeline.css">
