--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,5 +1,4 @@
 .form-style-6{
-    font: 95% Arial, Helvetica, sans-serif;
     max-width: 600px;
     width: 100%;
     margin: 10px auto;
@@ -40,7 +39,6 @@
     border: 1px solid #ccc;
     padding: 3%;
     color: #555;
-    font: 95% Arial, Helvetica, sans-serif;
 }
 .form-style-6 input[type="text"]:focus,
 .form-style-6 input[type="date"]:focus,
@@ -57,6 +55,8 @@
     padding: 3%;
     border: 1px solid #43D1AF;
 }
+
+
 
 .form-style-6 input[type="submit"],
 .form-style-6 input[type="button"]{
@@ -75,6 +75,13 @@
 .form-style-6 input[type="submit"]:hover,
 .form-style-6 input[type="button"]:hover{
     background: #2EBC99;
+}
+
+
+@media screen and (min-width: 720px) {
+    .guest-count {
+        width: 50% !important;
+    }
 }
 
 fieldset {
