--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,15 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'SNsanafonmaruP';
+  src: url('SNsanafonmaruP.ttf');
+}
+
 body {
   margin: 0;
-  font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-
+  font-family: SNsanafonmaruP, "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-size: 20px;
   background: #F4F4F4;
 }
 
@@ -110,7 +115,7 @@ ul {
 }
 
 ul li a {
-  font-size: 1.2rem;
+  font-size: 1.3em;
 }
 
 header nav ul li {
