--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -44,83 +44,82 @@
           </div>
         </div>
       </header>
-
       <section id="our-story">
         <div class="content">
           <h2>私たちについて</h2>
           <section id="cd-timeline" class="cd-container">
-    <div class="cd-timeline-block">
-      <div class="cd-timeline-img cd-picture">
-        <img src="img/cd-icon-picture.svg" alt="Picture">
-      </div> <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+              </div> <!-- cd-timeline-img -->
 
-      <div class="cd-timeline-content">
-        <h2>Our fateful encounter</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-        <span class="cd-date">November 4th 2014</span>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
+              <div class="cd-timeline-content">
+                <h2>Our fateful encounter</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <span class="cd-date">November 4th 2014</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
 
-    <div class="cd-timeline-block">
-      <div class="cd-timeline-img cd-movie">
-        <img src="img/cd-icon-movie.svg" alt="Movie">
-      </div> <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-movie">
+                <img src="img/cd-icon-movie.svg" alt="Movie">
+              </div> <!-- cd-timeline-img -->
 
-      <div class="cd-timeline-content">
-        <h2>Title of section 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-        <span class="cd-date">Jan 18</span>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
+              <div class="cd-timeline-content">
+                <h2>Title of section 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+                <span class="cd-date">Jan 18</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
 
-    <div class="cd-timeline-block">
-      <div class="cd-timeline-img cd-picture">
-        <img src="img/cd-icon-picture.svg" alt="Picture">
-      </div> <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+              </div> <!-- cd-timeline-img -->
 
-      <div class="cd-timeline-content">
-        <h2>Title of section 3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-        <span class="cd-date">Jan 24</span>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
+              <div class="cd-timeline-content">
+                <h2>Title of section 3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                <span class="cd-date">Jan 24</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
 
-    <div class="cd-timeline-block">
-      <div class="cd-timeline-img cd-location">
-        <img src="img/cd-icon-location.svg" alt="Location">
-      </div> <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
+              </div> <!-- cd-timeline-img -->
 
-      <div class="cd-timeline-content">
-        <h2>Title of section 4</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-        <span class="cd-date">Feb 14</span>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
+              <div class="cd-timeline-content">
+                <h2>Title of section 4</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <span class="cd-date">Feb 14</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
 
-    <div class="cd-timeline-block">
-      <div class="cd-timeline-img cd-location">
-        <img src="img/cd-icon-location.svg" alt="Location">
-      </div> <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
+              </div> <!-- cd-timeline-img -->
 
-      <div class="cd-timeline-content">
-        <h2>Title of section 5</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-        <span class="cd-date">Feb 18</span>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
+              <div class="cd-timeline-content">
+                <h2>Title of section 5</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+                <span class="cd-date">Feb 18</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
 
-    <div class="cd-timeline-block">
-      <div class="cd-timeline-img cd-movie">
-        <img src="img/cd-icon-movie.svg" alt="Movie">
-      </div> <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+              <div class="cd-timeline-img cd-movie">
+                <img src="img/cd-icon-movie.svg" alt="Movie">
+              </div> <!-- cd-timeline-img -->
 
-      <div class="cd-timeline-content">
-        <h2>Final Section</h2>
-        <p>This is the content of the last section</p>
-        <span class="cd-date">Feb 26</span>
-      </div> <!-- cd-timeline-content -->
-    </div> <!-- cd-timeline-block -->
-  </section> <!-- cd-timeline -->
+              <div class="cd-timeline-content">
+                <h2>Final Section</h2>
+                <p>This is the content of the last section</p>
+                <span class="cd-date">Feb 26</span>
+              </div> <!-- cd-timeline-content -->
+            </div> <!-- cd-timeline-block -->
+          </section> <!-- cd-timeline -->
         </div>
       </section>
 
@@ -141,6 +140,9 @@
       <section id="when-where">
         <div class="content">
           <h2>開催日時・場所</h2>
+          <ul class="rslides">
+            <li><img src="img/angepatio.png"></li>
+          </ul>
         </div>
       </section>
 
@@ -170,7 +172,30 @@
               Email
             </label>
             <div>
-              <input id="email" name="email" type="email" spellcheck="false" value="" maxlength="255" tabindex="3">
+              <input id="email" name="email" type="email" spellcheck="false" value="" maxlength="255" tabindex="2">
+           </div>
+          </div>
+
+          <div class="admission">
+            <label class="desc" id="adult" for="adult">
+              Adult (13+) 10,000円
+            </label>
+            <div>
+              <input id="adult" class="guest-count" name="adult" type="number" min="0" max="9" value="0" tabindex="3">
+           </div>
+
+           <label class="desc" id="Child" for="Child">
+              Child (5-12) 3,500円
+            </label>
+            <div>
+              <input id="child" class="guest-count" name="child" type="number" min="0" max="9" value="0" tabindex="4">
+           </div>
+
+           <label class="desc" id="infant" for="infant">
+              Infant (less than 5) 無料
+            </label>
+            <div>
+              <input id="infant" class="guest-count" name="infant" type="number" min="0" max="9" value="0" tabindex="5">
            </div>
           </div>
 
@@ -180,7 +205,7 @@
             </label>
 
             <div>
-              <textarea id="message" name="message" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+              <textarea id="message" name="message" spellcheck="true" rows="10" cols="50" tabindex="6"></textarea>
             </div>
           </div>
 
