--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -184,7 +184,7 @@
               <input id="adult" class="guest-count" name="adult" type="number" min="0" max="9" value="0" tabindex="3">
            </div>
 
-           <label class="desc" id="Child" for="Child">
+           <label class="desc" id="child" for="child">
               Child (5-12) 3,500円
             </label>
             <div>
