--- a/static/css/form.css
+++ b/static/css/form.css
@@ -39,6 +39,7 @@
     border: 1px solid #ccc;
     padding: 3%;
     color: #555;
+    font-size: 100%;
 }
 .form-style-6 input[type="text"]:focus,
 .form-style-6 input[type="date"]:focus,
