--- a/views/japanese.ejs
+++ b/views/japanese.ejs
@@ -54,9 +54,8 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>Our fateful encounter</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-                <span class="cd-date">November 4th 2014</span>
+                <h2>バドミントン</h2>
+                <p>早稲田大学在学中にバドミントンの授業をとってからバドミントンが大好きになった私。シアトルに来てからも、積極的に友達を誘ってバドミントンをよくしました。私の影響でアレックスもバドミントンにハマり、一緒にワシントン大学のバドミントン部に入部。アレックスが日本に来た時も友達や私の従弟とバドミントンをしました！最近は忙しく中々バドミントンをできずにいますが、これからもずっと一緒にバドミントンをしたいです☆</p>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
@@ -66,9 +65,9 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>Title of section 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-                <span class="cd-date">Jan 18</span>
+                <h2>バドミントン</h2>
+                <img style="width: 100%;" src="img/timeline/wakaba.jpg" alt="Lots of fun with Wakaba">
+                <span class="cd-date">Lots of fun with Wakaba</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
@@ -78,9 +77,10 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>Title of section 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-                <span class="cd-date">Jan 24</span>
+                <h2>誕生日</h2>
+                <p>アレックスはこれまでに何度も私に最高の思い出をプレゼントしてくれましたが、中でも私のお気に入りは２０１５年の、私のシアトルでの初めての誕生日です。当時学校の授業に加え、ワシントン大学編入のためにTOEFLの勉強もしていて忙しかったので、誕生日パーティーは必要ないと伝えていました。でもアレックスは私に内緒で仕事の休みをとってくれていて、当日サプライズで私の教室にケーキと風船とプレゼントを持って来てくれました。授業後先生に質問してる時に後ろからハグされてびっくり(笑)こういうの映画やドラマの中だけかと思ってたので、とっても驚いたし嬉しかったです(*^_^*)
+</p>
+                <span class="cd-date">Jan 14 2015</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
@@ -90,9 +90,9 @@
               </div> <!-- cd-timeline-img -->
 
               <div class="cd-timeline-content">
-                <h2>Title of section 4</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-                <span class="cd-date">Feb 14</span>
+                <h2>誕生日</h2>
+                <img style="width: 100%;" src="img/timeline/birthday.jpg" alt="Lots of fun with Wakaba">
+                <span class="cd-date">Lots of fun today</span>
               </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
 
@@ -126,13 +126,14 @@
       <section>
         <div class="content">
           <h2>Some of the our favorite photos</h2>
-          <ul class="rslides">
-            <li ><img src="img/slideshow/tree.jpg" class="slider-img" ></li>
+          <ul class="rslides min-height-600">
+            <li ><img src="img/slideshow/alex-birthday.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/anna-farewell.jpg" class="slider-img" ></li>
             <li ><img src="img/slideshow/bench.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/books.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/cafe.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/stairs.jpg" class="slider-img" ></li>
-            <li ><img src="img/slideshow/suzallo.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/cafe-japan.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/halloween.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/USJ.jpg" class="slider-img" ></li>
+            <li ><img src="img/slideshow/yellow-house.jpg" class="slider-img" ></li>
           </ul>
         </div>
       </section>
@@ -143,21 +144,24 @@
           <ul class="rslides">
             <li><img src="img/angepatio.png"></li>
           </ul>
+          Location: アンジェパティオ<br>
+          Address: 東京都渋谷区南平台町12-1<br>
+          Phone: 03-3476-7712
         </div>
       </section>
 
       <section id="RSVP">
-        <h2>Contact</h2>
+        <h2>参加予約</h2>
 
         <form class="form-style-6" method="post">
-
           <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          ご出席できる方はお名前とメールアドレス、参加人数を記入してください。
+          食物アレルギーなど注意事項がありましたらメッセージ欄にご記入下さい。
+          その他メッセージがありましたら何でもご自由にお書き下さい。
+          パーティーは会費制で参加費一人１万円(13歳以上)になります。<br><br>
+          ご祝儀は不要です。<br>
+          ご参加誠にありがとうございます！<br>
+          当日お会いできるのを楽しみにしています！<br>
           </p>
           <hr>
           <div>
@@ -220,31 +224,31 @@
       </section>
       <footer></footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/responsiveslides.min.js"></script>
+
+    <script>
+
+      $(window).scroll(function () {
+        if ( $(window).scrollTop() >= $("header").height() - 70) {
+          $('#navbar').addClass("scrolled");
+          $('#navbar').removeClass("bottom");
+        } else {
+          $('#navbar').removeClass("scrolled");
+          $('#navbar').addClass("bottom");
+        }
+      });
+
+      window.addEventListener("hashchange", function () {
+        console.log("hashchange!");
+        window.scrollTo(window.scrollX, window.scrollY - 68);
+      });
+    </script>
+    <script src="js/slideshow.js"></script>
+    <script src="js/smooth-scroll.min.js"></script>
+    <script src="js/parallax.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/modernizr.js"></script>
+    <script src="js/hamburger.js"></script>
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="js/responsiveslides.min.js"></script>
-
-  <script>
-
-    $(window).scroll(function () {
-      if ( $(window).scrollTop() >= $("header").height() - 70) {
-        $('#navbar').addClass("scrolled");
-        $('#navbar').removeClass("bottom");
-      } else {
-        $('#navbar').removeClass("scrolled");
-        $('#navbar').addClass("bottom");
-      }
-    });
-
-    window.addEventListener("hashchange", function () {
-      console.log("hashchange!");
-      window.scrollTo(window.scrollX, window.scrollY - 68);
-    });
-  </script>
-  <script src="js/slideshow.js"></script>
-  <script src="js/smooth-scroll.min.js"></script>
-  <script src="js/parallax.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/modernizr.js"></script>
-  <script src="js/hamburger.js"></script>
 </html>
